# start/routes.js
@@ -20,6 +20,5 @@ Route.get("docs", async ({ request, response, view }) => {
     const Helpers = use("Helpers")
     return response.download(Helpers.resourcesPath('views/docs.html'))
 })
-Route.get("reset/all", "MatchController.resetData")
 Route.get("/:WEEK", "MatchController.showResults")
 Route.get("matches/:TEAM_ID", "MatchController.showTeamMatches")
